--- a/public/css/app.css
+++ b/public/css/app.css
@@ -452,6 +452,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mt-5 {
   margin-top: 1.25rem;
 }
+.mt-24 {
+  margin-top: 6rem;
+}
 .ml-1 {
   margin-left: 0.25rem;
 }
@@ -479,8 +482,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .-mt-px {
   margin-top: -1px;
 }
-.mt-24 {
-  margin-top: 6rem;
+.mt-3 {
+  margin-top: 0.75rem;
+}
+.mt-20 {
+  margin-top: 5rem;
 }
 .flex {
   display: flex;
@@ -494,8 +500,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-32 {
   height: 8rem;
 }
+.h-\[55px\] {
+  height: 55px;
+}
 .h-5 {
   height: 1.25rem;
+}
+.h-6 {
+  height: 1.5rem;
 }
 .h-8 {
   height: 2rem;
@@ -503,11 +515,30 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-16 {
   height: 4rem;
 }
-.h-\[55px\] {
-  height: 55px;
+.h-full {
+  height: 100%;
 }
-.h-6 {
-  height: 1.5rem;
+.h-max {
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+}
+.h-1\/2 {
+  height: 50%;
+}
+.h-80 {
+  height: 20rem;
+}
+.max-h-max {
+  max-height: -webkit-max-content;
+  max-height: -moz-max-content;
+  max-height: max-content;
+}
+.max-h-screen {
+  max-height: 100vh;
+}
+.max-h-full {
+  max-height: 100%;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -515,23 +546,20 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-full {
   width: 100%;
 }
+.w-\[200px\] {
+  width: 200px;
+}
 .w-5 {
   width: 1.25rem;
+}
+.w-6 {
+  width: 1.5rem;
 }
 .w-8 {
   width: 2rem;
 }
 .w-auto {
   width: auto;
-}
-.w-\[200\] {
-  width: 200;
-}
-.w-\[200px\] {
-  width: 200px;
-}
-.w-6 {
-  width: 1.5rem;
 }
 .max-w-7xl {
   max-width: 80rem;
@@ -566,44 +594,19 @@ Ensure the default browser behavior of the `hidden` attribute.
 .overflow-hidden {
   overflow: hidden;
 }
-.rounded-sm {
-  border-radius: 0.125rem;
-}
-.rounded-\[px\] {
-  border-radius: px;
-}
-.rounded-\[4px\] {
-  border-radius: 4px;
-}
 .rounded {
   border-radius: 0.25rem;
-}
-.border-8 {
-  border-width: 8px;
-}
-.border-2 {
-  border-width: 2px;
-}
-.border-4 {
-  border-width: 4px;
 }
 .border-t {
   border-top-width: 1px;
 }
-.border-solid {
-  border-style: solid;
-}
-.border-cyan-700 {
+.border-black {
   --tw-border-opacity: 1;
-  border-color: rgb(14 116 144 / var(--tw-border-opacity));
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
-}
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 .bg-main {
   --tw-bg-opacity: 1;
@@ -617,21 +620,21 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
-.bg-transparent {
-  background-color: transparent;
-}
-.bg-gradient-to-tl {
-  background-image: linear-gradient(to top left, var(--tw-gradient-stops));
-}
-.bg-gradient-to-br {
-  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 .bg-gradient-to-tr {
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
-.from-pink-700 {
-  --tw-gradient-from: #be185d;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(190 24 93 / 0));
+.bg-gradient-to-bl {
+  background-image: linear-gradient(to bottom left, var(--tw-gradient-stops));
+}
+.bg-gradient-to-br {
+  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+}
+.bg-gradient-to-tl {
+  background-image: linear-gradient(to top left, var(--tw-gradient-stops));
 }
 .from-\[\#9358F7\] {
   --tw-gradient-from: #9358F7;
@@ -649,9 +652,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-gradient-from: #D24074;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(210 64 116 / 0));
 }
-.to-purple-900 {
-  --tw-gradient-to: #581c87;
-}
 .to-\[\#10D7E2\] {
   --tw-gradient-to: #10D7E2;
 }
@@ -664,29 +664,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .to-\[\#6518B4\] {
   --tw-gradient-to: #6518B4;
 }
-.p-4 {
-  padding: 1rem;
-}
-.p-6 {
-  padding: 1.5rem;
-}
-.p-3 {
-  padding: 0.75rem;
-}
-.p-2 {
-  padding: 0.5rem;
-}
-.p-1 {
-  padding: 0.25rem;
-}
-.p-8 {
-  padding: 2rem;
-}
 .p-0\.5 {
   padding: 0.125rem;
 }
 .p-0 {
   padding: 0px;
+}
+.p-6 {
+  padding: 1.5rem;
 }
 .px-2 {
   padding-left: 0.5rem;
@@ -763,10 +748,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
