--- a/public/css/app.css
+++ b/public/css/app.css
@@ -488,6 +488,39 @@ Ensure the default browser behavior of the `hidden` attribute.
 .-mt-px {
   margin-top: -1px;
 }
+.ml-44 {
+  margin-left: 11rem;
+}
+.ml-52 {
+  margin-left: 13rem;
+}
+.ml-20 {
+  margin-left: 5rem;
+}
+.ml-72 {
+  margin-left: 18rem;
+}
+.ml-80 {
+  margin-left: 20rem;
+}
+.ml-64 {
+  margin-left: 16rem;
+}
+.ml-48 {
+  margin-left: 12rem;
+}
+.ml-32 {
+  margin-left: 8rem;
+}
+.mt-6 {
+  margin-top: 1.5rem;
+}
+.mr-7 {
+  margin-right: 1.75rem;
+}
+.mr-10 {
+  margin-right: 2.5rem;
+}
 .flex {
   display: flex;
 }
@@ -503,14 +536,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-\[55px\] {
   height: 55px;
 }
-.h-5 {
-  height: 1.25rem;
-}
-.h-6 {
-  height: 1.5rem;
-}
 .h-14 {
   height: 3.5rem;
+}
+.h-5 {
+  height: 1.25rem;
 }
 .h-8 {
   height: 2rem;
@@ -527,20 +557,35 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-\[200px\] {
   width: 200px;
 }
-.w-5 {
-  width: 1.25rem;
-}
-.w-6 {
-  width: 1.5rem;
-}
 .w-48 {
   width: 12rem;
+}
+.w-5 {
+  width: 1.25rem;
 }
 .w-8 {
   width: 2rem;
 }
 .w-auto {
   width: auto;
+}
+.w-96 {
+  width: 24rem;
+}
+.w-\[799px\] {
+  width: 799px;
+}
+.w-\[900px\] {
+  width: 900px;
+}
+.w-\[2000px\] {
+  width: 2000px;
+}
+.w-\[750px\] {
+  width: 750px;
+}
+.w-\[699px\] {
+  width: 699px;
 }
 .max-w-7xl {
   max-width: 80rem;
@@ -559,11 +604,20 @@ Ensure the default browser behavior of the `hidden` attribute.
 .flex-col {
   flex-direction: column;
 }
+.flex-col-reverse {
+  flex-direction: column-reverse;
+}
 .flex-wrap {
   flex-wrap: wrap;
 }
 .items-center {
   align-items: center;
+}
+.items-baseline {
+  align-items: baseline;
+}
+.justify-start {
+  justify-content: flex-start;
 }
 .justify-center {
   justify-content: center;
@@ -580,8 +634,20 @@ Ensure the default browser behavior of the `hidden` attribute.
 .self-center {
   align-self: center;
 }
+.overflow-auto {
+  overflow: auto;
+}
 .overflow-hidden {
   overflow: hidden;
+}
+.overflow-x-auto {
+  overflow-x: auto;
+}
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+.overflow-y-hidden {
+  overflow-y: hidden;
 }
 .rounded {
   border-radius: 0.25rem;
@@ -689,6 +755,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-center {
   text-align: center;
 }
+.align-baseline {
+  vertical-align: baseline;
+}
+.align-middle {
+  vertical-align: middle;
+}
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -739,6 +811,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
+.text-\[\#C4C4C4\] {
+  --tw-text-opacity: 1;
+  color: rgb(196 196 196 / var(--tw-text-opacity));
+}
+.text-\[\#6CACE4\] {
+  --tw-text-opacity: 1;
+  color: rgb(108 172 228 / var(--tw-text-opacity));
+}
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -751,6 +831,28 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.transition {
+  transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.delay-75 {
+  transition-delay: 75ms;
+}
+.delay-500 {
+  transition-delay: 500ms;
+}
+.delay-150 {
+  transition-delay: 150ms;
+}
+.duration-300 {
+  transition-duration: 300ms;
+}
+.duration-500 {
+  transition-duration: 500ms;
 }
 .hover\:bg-\[\#1F1E1E\]:hover {
   --tw-bg-opacity: 1;
