--- a/public/css/app.css
+++ b/public/css/app.css
@@ -436,6 +436,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .right-0 {
   right: 0px;
 }
+.col-auto {
+  grid-column: auto;
+}
 .m-auto {
   margin: auto;
 }
@@ -461,6 +464,27 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mt-20 {
   margin-top: 5rem;
 }
+.ml-72 {
+  margin-left: 18rem;
+}
+.ml-20 {
+  margin-left: 5rem;
+}
+.mt-6 {
+  margin-top: 1.5rem;
+}
+.mt-8 {
+  margin-top: 2rem;
+}
+.mt-28 {
+  margin-top: 7rem;
+}
+.mt-14 {
+  margin-top: 3.5rem;
+}
+.mt-7 {
+  margin-top: 1.75rem;
+}
 .ml-1 {
   margin-left: 0.25rem;
 }
@@ -479,47 +503,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .ml-4 {
   margin-left: 1rem;
 }
-.mt-8 {
-  margin-top: 2rem;
-}
 .ml-12 {
   margin-left: 3rem;
 }
 .-mt-px {
   margin-top: -1px;
-}
-.ml-44 {
-  margin-left: 11rem;
-}
-.ml-52 {
-  margin-left: 13rem;
-}
-.ml-20 {
-  margin-left: 5rem;
-}
-.ml-72 {
-  margin-left: 18rem;
-}
-.ml-80 {
-  margin-left: 20rem;
-}
-.ml-64 {
-  margin-left: 16rem;
-}
-.ml-48 {
-  margin-left: 12rem;
-}
-.ml-32 {
-  margin-left: 8rem;
-}
-.mt-6 {
-  margin-top: 1.5rem;
-}
-.mr-7 {
-  margin-right: 1.75rem;
-}
-.mr-10 {
-  margin-right: 2.5rem;
 }
 .flex {
   display: flex;
@@ -533,9 +521,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-32 {
   height: 8rem;
 }
-.h-\[55px\] {
-  height: 55px;
-}
 .h-14 {
   height: 3.5rem;
 }
@@ -548,17 +533,26 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-16 {
   height: 4rem;
 }
+.h-\[55px\] {
+  height: 55px;
+}
 .min-h-screen {
   min-height: 100vh;
 }
 .w-full {
   width: 100%;
 }
-.w-\[200px\] {
-  width: 200px;
-}
 .w-48 {
   width: 12rem;
+}
+.w-\[699px\] {
+  width: 699px;
+}
+.w-\[1300px\] {
+  width: 1300px;
+}
+.w-80 {
+  width: 20rem;
 }
 .w-5 {
   width: 1.25rem;
@@ -569,23 +563,13 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-auto {
   width: auto;
 }
-.w-96 {
-  width: 24rem;
+.w-\[200px\] {
+  width: 200px;
 }
-.w-\[799px\] {
-  width: 799px;
-}
-.w-\[900px\] {
-  width: 900px;
-}
-.w-\[2000px\] {
-  width: 2000px;
-}
-.w-\[750px\] {
-  width: 750px;
-}
-.w-\[699px\] {
-  width: 699px;
+.min-w-max {
+  min-width: -webkit-max-content;
+  min-width: -moz-max-content;
+  min-width: max-content;
 }
 .max-w-7xl {
   max-width: 80rem;
@@ -604,11 +588,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .flex-col {
   flex-direction: column;
 }
-.flex-col-reverse {
-  flex-direction: column-reverse;
-}
 .flex-wrap {
   flex-wrap: wrap;
+}
+.flex-wrap-reverse {
+  flex-wrap: wrap-reverse;
 }
 .items-center {
   align-items: center;
@@ -625,29 +609,50 @@ Ensure the default browser behavior of the `hidden` attribute.
 .justify-between {
   justify-content: space-between;
 }
+.justify-around {
+  justify-content: space-around;
+}
+.justify-evenly {
+  justify-content: space-evenly;
+}
 .gap-8 {
   gap: 2rem;
 }
 .gap-2 {
   gap: 0.5rem;
 }
+.gap-1 {
+  gap: 0.25rem;
+}
+.gap-10 {
+  gap: 2.5rem;
+}
+.gap-6 {
+  gap: 1.5rem;
+}
+.gap-12 {
+  gap: 3rem;
+}
+.gap-36 {
+  gap: 9rem;
+}
+.gap-5 {
+  gap: 1.25rem;
+}
+.gap-7 {
+  gap: 1.75rem;
+}
+.gap-20 {
+  gap: 5rem;
+}
+.gap-40 {
+  gap: 10rem;
+}
 .self-center {
   align-self: center;
 }
-.overflow-auto {
-  overflow: auto;
-}
 .overflow-hidden {
   overflow: hidden;
-}
-.overflow-x-auto {
-  overflow-x: auto;
-}
-.overflow-x-hidden {
-  overflow-x: hidden;
-}
-.overflow-y-hidden {
-  overflow-y: hidden;
 }
 .rounded {
   border-radius: 0.25rem;
@@ -682,6 +687,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-\[\#C6C6C6\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(198 198 198 / var(--tw-bg-opacity));
+}
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -689,45 +698,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-gradient-to-tr {
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
-.bg-gradient-to-br {
-  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
-}
-.from-\[\#9358F7\] {
-  --tw-gradient-from: #9358F7;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(147 88 247 / 0));
-}
-.from-\[\#6964DE\] {
-  --tw-gradient-from: #6964DE;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(105 100 222 / 0));
-}
-.from-\[\#F4426C\] {
-  --tw-gradient-from: #F4426C;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(244 66 108 / 0));
-}
-.from-\[\#D24074\] {
-  --tw-gradient-from: #D24074;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(210 64 116 / 0));
-}
-.to-\[\#10D7E2\] {
-  --tw-gradient-to: #10D7E2;
-}
-.to-\[\#FCA6E9\] {
-  --tw-gradient-to: #FCA6E9;
-}
-.to-\[\#FBF2B1\] {
-  --tw-gradient-to: #FBF2B1;
-}
-.to-\[\#6518B4\] {
-  --tw-gradient-to: #6518B4;
+.p-6 {
+  padding: 1.5rem;
 }
 .p-0\.5 {
   padding: 0.125rem;
 }
 .p-0 {
   padding: 0px;
-}
-.p-6 {
-  padding: 1.5rem;
 }
 .px-2 {
   padding-left: 0.5rem;
@@ -755,12 +733,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-center {
   text-align: center;
 }
-.align-baseline {
-  vertical-align: baseline;
-}
-.align-middle {
-  vertical-align: middle;
-}
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -780,8 +752,19 @@ Ensure the default browser behavior of the `hidden` attribute.
 .font-semibold {
   font-weight: 600;
 }
+.uppercase {
+  text-transform: uppercase;
+}
 .leading-7 {
   line-height: 1.75rem;
+}
+.text-\[\#C4C4C4\] {
+  --tw-text-opacity: 1;
+  color: rgb(196 196 196 / var(--tw-text-opacity));
+}
+.text-\[\#6CACE4\] {
+  --tw-text-opacity: 1;
+  color: rgb(108 172 228 / var(--tw-text-opacity));
 }
 .text-gray-200 {
   --tw-text-opacity: 1;
@@ -811,14 +794,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
-.text-\[\#C4C4C4\] {
-  --tw-text-opacity: 1;
-  color: rgb(196 196 196 / var(--tw-text-opacity));
-}
-.text-\[\#6CACE4\] {
-  --tw-text-opacity: 1;
-  color: rgb(108 172 228 / var(--tw-text-opacity));
-}
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -832,32 +807,94 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.transition {
-  transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
+
+@font-face {
+    font-family: Inter;
+    src: url(https://fonts.googleapis.com/css2?family=Inter&display=swap);
+
+    font-family: FiraCode;
+    src: url(https://fonts.googleapis.com/css2?family=Fira+Code&display=swap);
+
+    font-family: 'monte';
+    src: url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap');
 }
-.delay-75 {
-  transition-delay: 75ms;
+
+#nav-name {
+    gap: 30px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 22px;
 }
-.delay-500 {
-  transition-delay: 500ms;
+
+.font {
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 29px;
+    color: white;
 }
-.delay-150 {
-  transition-delay: 150ms;
+
+.name {
+    text-align: justify;
+    text-justify: inter-word;
+    font-family: 'FiraCode';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 96px;
+    line-height: 110px;
+    background: linear-gradient(89.81deg, #9845E8 -1.72%, #33D2FF 54.05%, #DD5789 99.78%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
 }
-.duration-300 {
-  transition-duration: 300ms;
+
+.border-email {
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
-.duration-500 {
-  transition-duration: 500ms;
+
+.contact-button {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    Font-style: Light;
+    Line-height: 124%;
+    color: white;
 }
+
+.onclic {
+    background-color: #1F1E1E;
+}
+
+
+.email-gradient {
+  --tw-gradient-from: #9358F7;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(147 88 247 / 0));
+  --tw-gradient-to: #10D7E2;
+}
+
+.linkedin-gradient {
+  --tw-gradient-from: #6964DE;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(105 100 222 / 0));
+  --tw-gradient-to: #FCA6E9;
+}
+
+.github-gradient {
+  --tw-gradient-from: #F4426C;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(244 66 108 / 0));
+  --tw-gradient-to: #FBF2B1;
+}
+
+.instagram-gradient {
+  --tw-gradient-from: #D24074;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(210 64 116 / 0));
+  --tw-gradient-to: #6518B4;
+}
+
 .hover\:bg-\[\#1F1E1E\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(31 30 30 / var(--tw-bg-opacity));
 }
+
 @media (prefers-color-scheme: dark) {
 
   .dark\:border-gray-700 {
@@ -890,6 +927,7 @@ Ensure the default browser behavior of the `hidden` attribute.
     color: rgb(156 163 175 / var(--tw-text-opacity));
   }
 }
+
 @media (min-width: 640px) {
 
   .sm\:ml-0 {
@@ -937,6 +975,7 @@ Ensure the default browser behavior of the `hidden` attribute.
     text-align: right;
   }
 }
+
 @media (min-width: 768px) {
 
   .md\:grid-cols-2 {
@@ -951,6 +990,7 @@ Ensure the default browser behavior of the `hidden` attribute.
     border-left-width: 1px;
   }
 }
+
 @media (min-width: 1024px) {
 
   .lg\:px-8 {
@@ -958,3 +998,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     padding-right: 2rem;
   }
 }
+
+
+
