--- a/public/css/app.css
+++ b/public/css/app.css
@@ -763,6 +763,9 @@ video {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
+.pb-5 {
+  padding-bottom: 1.25rem;
+}
 .pt-8 {
   padding-top: 2rem;
 }
@@ -996,14 +999,14 @@ video {
   color: rgb(108 172 228 / var(--tw-text-opacity));
 }
 
-.dark .dark\:text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
 .dark .dark\:text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .dark .dark\:hover\:border-l-white:hover {
